--- a/src/assets/translations/ptBr.json
+++ b/src/assets/translations/ptBr.json
@@ -1,11 +1,15 @@
 {
     "header": {
-        "title": "Data Science Portfolio",
+        "title": "Portfólio",
         "linkedin": "https://www.linkedin.com/in/juniorsergio/",
         "localization": "Belo Horizonte, MG, Brasil"
     },
 
     "main": {
+        "tabs": {
+            "aboutMe": "Sobre Mim",
+            "dataScience": "Ciência de Dados"
+        },
         "about": {
             "title": "Sobre Mim",
             "text": "Formado em Engenharia de Computação pelo CEFET-MG, trabalhei como desenvolvedor de chatbots em boa parte da minha carreira profissional. Por ser uma área interdisciplinar, me permitiu explorar áreas tangentes à programação, como análise de dados, UX writing, gestão de produto e gestão ágil. Devido ao TCC e ao meu interesse pela interface com áreas de negócio, me aproximei cada vez mais da área de Ciência de Dados, e estou buscando uma oportunidade de migrar para essa carreira. Tenho bastante familiaridade com Python, e já desenvolvi modelos de Machine Learning usando redes neurais, árvores de decisão, regressão linear e logística. Já trabalhei também com git e pipelines CI/CD durante o desenvolvimento de APIs em .NET. Assim, esse portfólio foi criado para mostrar alguns projetos que já desenvolvi na área de Ciência de Dados, visando potenciais recrutadores."
