--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -28,14 +28,14 @@
             {
                 "id": "credit-risk",
                 "title": "Credit Risk Classification Models",
-                "projectLink": "https://github.com/juniorsergio/Classification-Projects/blob/master/Credit%20Risk/credit_risk_prediction.ipynb",
+                "projectLink": "https://github.com/juniorsergio/Classification-Projects/tree/master/Credit%20Risk",
                 "text": "One of the most important real-live scenarios for Data Science is the prediction of credit risk, whether someone is going to become a defaulter. This project was developed as part of the admission process of a company, meaning the data provided comes from a real company in the sector. My purpose was to create a machine learning model able to predict the defaulters within a scenario that is safe for the company, instead of trying to pursue the perfect model. During the development, two problems with the data had to be dealt with: the class imbalance and a huge amount of missing values for one of the variables. With that in mind, five algorithms based on decision trees were created, and the best for this particular problem was the XGBoost, using a special parameter to compensate for the class imbalance. The result was a precision of 98% for the negative class and a recall of 70% for the positive (defaulter) class.",
                 "figcaption": "Confusion Matrix of the XGBoost model"
             },
             {
                 "id": "breaking-bad",
                 "title": "Data Exploration of Breaking Bad Episodes Rating",
-                "projectLink": "https://github.com/juniorsergio/DataExploration/blob/master/Breaking%20Bad%20-%20Rating%20analysis/breaking-bad-imdb-rating-analysis-by-writer.ipynb",
+                "projectLink": "https://github.com/juniorsergio/DataExploration/tree/master/Breaking%20Bad%20-%20Rating%20analysis",
                 "text": "Breaking Bad is considered to be one of the best TV shows ever made, which raises questions about how this quality level was obtained. One of those questions, and the purpose of this project, is if there could be any relationship between a an episode IMDB rating and its writer. More specifically, the hyphotesis was that since VInce Gilligan is the crator of the series, his episodes would probably have the highest ratings. In order to do that, this <a href=\"https://www.kaggle.com/varpit94/breaking-bad-tv-show-all-seasons-episodes-data\">dataset</a> was used since it hads the two necessary informations: the episode's rating and its writer. The result of the analysis was that the ratings don't appear to have a strong relationship with the episode's writer.",
                 "figcaption": "Boxplot of episode ratings per writer"
             }
