--- a/src/assets/translations/ptBr.json
+++ b/src/assets/translations/ptBr.json
@@ -28,14 +28,14 @@
             {
                 "id": "credit-risk",
                 "title": "Modelos de Classificação para Análise de Crédito",
-                "projectLink": "https://github.com/juniorsergio/Classification-Projects/blob/master/Credit%20Risk/credit_risk_prediction.ipynb",
+                "projectLink": "https://github.com/juniorsergio/Classification-Projects/tree/master/Credit%20Risk",
                 "text": "Um dos mais importantes cenários reais para Ciência de Dados é a análise de crédito, isto é, prever se um cliente se tornará inadimplente. Esse projeto foi desenvolvido como parte do processo seletivo de uma empresa, o que significa que os dados são reais, provindo de uma empresa do setor de crédito. Meu propósito foi criar um modelo de machine learning que fosse capaz de prever os inadimplentes de forma segura para a empresa-cliente, ao invés de tentar chegar no modelo perfeito. Durante o desenvolvimento, dois problemas foram encontrados nos dados: o desbalanceamento de classes e uma grande quantidade de valores nulos em uma das variáveis independentes. Com isso em mente, foram escolhidos cinco algoritmos baseados em árvores de decisão. O melhor dentre eles para esse problema em particular foi o XGBoost, que possui um parâmetro específico para compensar o desbalanceamento de classes. O resultado obtido foi uma precisão de 98% para a classe não-inadimplentes, e um recall de 70% para a classe de inadimplentes.",
                 "figcaption": "Matrix de confusão do modelo obtido pelo XGBoost"
             },
             {
                 "id": "breaking-bad",
                 "title": "Exploração de Dados das Notas dos Episódios de Breaking Bad",
-                "projectLink": "https://github.com/juniorsergio/DataExploration/blob/master/Breaking%20Bad%20-%20Rating%20analysis/breaking-bad-imdb-rating-analysis-by-writer.ipynb",
+                "projectLink": "https://github.com/juniorsergio/DataExploration/tree/master/Breaking%20Bad%20-%20Rating%20analysis",
                 "text": "Breaking Bad é considerada uma das melhores séries já feitas, o que levanta questões sobre como esse nível de qualidade foi atingido. Uma dessas questões, e o objetivo desse projeto, é se há alguma relação entre a nota de um episódio no IMDB e o roteirista dele. Mais especificamente, a hipótese levantada foi de que, por ser o criador da série, os episódios escritos por Vince Gilligan teriam as maiores notas. Para investigar isso, esse <a href=\"https://www.kaggle.com/varpit94/breaking-bad-tv-show-all-seasons-episodes-data\">dataset</a> foi utilizado por conter as duas informações necessárias: a nota do episódio e seu roteirista. O resultado da análise foi de que as notas não aparentam ter uma forte relação com o roteirista do episódio.",
                 "figcaption": "Boxplot da nota dos episódios por escritor"
             }
