--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -15,7 +15,12 @@
             "text": "Having a degree in Computer Engineering by CEFET-MG, I’ve worked as a chatbot developer for a large part of my professional career. Being an interdisciplinary field, it allowed me to explore related fields, such as data analysis, UX writing, product and agile management. Due to my undergraduate thesis and my interest in working alongside business units, I’ve grown closer to Data Science, and now I’m looking for an opportunity to start working in this area. I have a lot of experience with Python, having developed Machine Learning models using neural networks, decision trees, logistic and linear regression. I’ve also worked with git and CI/CD pipelines as part of the development of .NET APIs. Therefore, this portfolio was created with the intention of showcase my work with Data Science, specially for potential employers."
         },
 
-        "projects": [
+        "frontend" : {
+            "of": "of",
+            "soon": "Coming soon"
+        },
+
+        "dataScience": [
             {
                 "id": "tesouro-direto",
                 "title": "Time Series Prediction Models for the Interest Rates of Tesouro Direto IPCA Securities",
