--- a/src/assets/translations/ptBr.json
+++ b/src/assets/translations/ptBr.json
@@ -17,7 +17,24 @@
 
         "frontend" : {
             "of": "de",
-            "soon": "Em breve"
+            "soon": "Em breve",
+            "stackTitle": "Tecnologias",
+            "projects": [
+                {
+                    "id": "social-media-feed",
+                    "projectLink": "https://github.com/juniorsergio/social-media-feed",
+                    "stacks": ["react", "typescript", "graphql"],
+                    "description": "Social Media Feed",
+                    "type": "active"
+                },
+                {
+                    "id": "personal-finance",
+                    "projectLink": "",
+                    "stacks": ["react", "typescript"],
+                    "description": "Personal Finance",
+                    "type": "disabled"
+                }
+            ]
         },
 
         "dataScience": [    
