--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -16,21 +16,22 @@
         },
 
         "frontend" : {
-            "of": "of",
             "soon": "Coming soon",
-            "stackTitle": "Technologies",
+            "opening": "The web pages below were developed from the lessons of the acceleration program <a href='https://www.rocketseat.com.br/ignite'>Ignite</a> by Rocketseat. In order to access the pages, click on any portion of the carousel. The respective Github link of each page can be found on their footer.",
             "projects": [
                 {
                     "id": "social-media-feed",
                     "projectLink": "https://github.com/juniorsergio/social-media-feed",
                     "stacks": ["react", "typescript", "graphql"],
-                    "description": "Social Media Feed",
+                    "title": "Social Media Feed",
+                    "description": "Web page developed using ReactJS to simulate a social media feed. It's possible to create posts, write comments and react to them. In order to ensure the data persistence, an integration with <a href='https://hygraph.com/'>Hygraph (formerly GraphCMS)</a> was made, so the information created by the users could be recorded and retrieved. The profile created by the user to interact with the application has an expiration time of one day, and it's possible to change its information within this lifetime.",
                     "type": "active"
                 },
                 {
                     "id": "personal-finance",
                     "projectLink": "",
                     "stacks": ["react", "typescript"],
+                    "title": "Personal Finance",
                     "description": "Personal Finance",
                     "type": "disabled"
                 }
