--- a/src/assets/translations/ptBr.json
+++ b/src/assets/translations/ptBr.json
@@ -16,21 +16,22 @@
         },
 
         "frontend" : {
-            "of": "de",
             "soon": "Em breve",
-            "stackTitle": "Tecnologias",
+            "opening": "As páginas web abaixo foram desenvolvidas a partir das aulas do programa de aceleração <a href='https://www.rocketseat.com.br/ignite'>Ignite</a> da Rocketseat. Para acessar a página, basta clicar em qualquer ponto do carrossel. O link para o respectivo repositório do GitHub se encontra no rodapé das páginas.",
             "projects": [
                 {
                     "id": "social-media-feed",
                     "projectLink": "https://github.com/juniorsergio/social-media-feed",
                     "stacks": ["react", "typescript", "graphql"],
-                    "description": "Social Media Feed",
+                    "title": "Social Media Feed",
+                    "description": "Página web desenvolvida em ReactJS simulando o comportamento de uma rede social. É possível criar publicações, escrever comentários e reagir a eles. Para garantir a persistência dos dados, foi feita uma integração com o <a href='https://hygraph.com/'>Hygraph (antigo GraphCMS)</a> para registrar e ler as informações criadas pelos usuários no frontend da aplicação. O perfil criado pelo usuário para interagir com a aplicação tem duração de um dia, e é possível alterar as informações dele dentro desse período.",
                     "type": "active"
                 },
                 {
                     "id": "personal-finance",
                     "projectLink": "",
                     "stacks": ["react", "typescript"],
+                    "title": "Personal Finance",
                     "description": "Personal Finance",
                     "type": "disabled"
                 }
