--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -8,6 +8,7 @@
     "main": {
         "tabs": {
             "aboutMe": "About Me",
+            "frontend": "Front-End",
             "dataScience": "Data Science"
         },
         "about": {
